; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/cpufreq/extr_cpufreq.c_cpufreq_driver_target.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/cpufreq/extr_cpufreq.c_cpufreq_driver_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpufreq_policy = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cpufreq_driver_target(%struct.cpufreq_policy* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.cpufreq_policy*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.cpufreq_policy* %0, %struct.cpufreq_policy** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %7, align 4
  %10 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %11 = getelementptr inbounds %struct.cpufreq_policy, %struct.cpufreq_policy* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.cpufreq_policy* @cpufreq_cpu_get(i32 %12)
  store %struct.cpufreq_policy* %13, %struct.cpufreq_policy** %4, align 8
  %14 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %15 = icmp ne %struct.cpufreq_policy* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  br label %37

17:                                               ; preds = %3
  %18 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %19 = getelementptr inbounds %struct.cpufreq_policy, %struct.cpufreq_policy* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @lock_policy_rwsem_write(i32 %20)
  %22 = call i64 @unlikely(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  br label %34

25:                                               ; preds = %17
  %26 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @__cpufreq_driver_target(%struct.cpufreq_policy* %26, i32 %27, i32 %28)
  store i32 %29, i32* %7, align 4
  %30 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %31 = getelementptr inbounds %struct.cpufreq_policy, %struct.cpufreq_policy* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @unlock_policy_rwsem_write(i32 %32)
  br label %34

34:                                               ; preds = %25, %24
  %35 = load %struct.cpufreq_policy*, %struct.cpufreq_policy** %4, align 8
  %36 = call i32 @cpufreq_cpu_put(%struct.cpufreq_policy* %35)
  br label %37

37:                                               ; preds = %34, %16
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local %struct.cpufreq_policy* @cpufreq_cpu_get(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @lock_policy_rwsem_write(i32) #1

declare dso_local i32 @__cpufreq_driver_target(%struct.cpufreq_policy*, i32, i32) #1

declare dso_local i32 @unlock_policy_rwsem_write(i32) #1

declare dso_local i32 @cpufreq_cpu_put(%struct.cpufreq_policy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
